# aws-service-api

./: .gitignore  LICENSE  README.md  aws-service-api.cabal
src/Network/AWS/: Config.hs  ServiceManagement.hs
