name:                aws-service-api
version:             0.3.0.0
license:             BSD3
license-file:        LICENSE
author:              Ian Connolly
maintainer:          ian@connolly.io
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:     Network.AWS.ServiceManagement
  build-depends:       base <4.8,
                       aws-sdk == 0.12.4,
                       transformers,
                       conduit,
                       resourcet,
                       text,
                       parsec,
                       bytestring,
                       simple-config >= 1.1.1.0,
                       containers

  hs-source-dirs:      src
  default-language:    Haskell2010
